--- a/GUI/Source/Main.ui
+++ b/GUI/Source/Main.ui
@@ -4,7 +4,7 @@
     <property name="cursor">arrow</property>
     <property name="height">0</property>
     <property name="highlightbackground">#c8797b</property>
-    <property name="minsize">900|540</property>
+    <property name="minsize">900|550</property>
     <property name="relief">flat</property>
     <property name="resizable">none</property>
     <property name="title" translatable="yes">PDBaser - GUI</property>
@@ -26,7 +26,7 @@
           <property name="sticky">nsew</property>
           <property type="col" id="0" name="minsize">0</property>
           <property type="col" id="0" name="weight">0</property>
-          <property type="row" id="0" name="minsize">170</property>
+          <property type="row" id="0" name="minsize">145</property>
           <property type="row" id="0" name="pad">0</property>
           <property type="row" id="0" name="weight">0</property>
         </layout>
@@ -231,15 +231,16 @@
         <child>
           <object class="ttk.Label" id="FindLabel">
             <property name="anchor">center</property>
-            <property name="text" translatable="yes">Find in pdb list</property>
+            <property name="text" translatable="yes">Find</property>
             <layout manager="grid">
               <property name="column">0</property>
               <property name="columnspan">1</property>
-              <property name="padx">5</property>
+              <property name="padx">0</property>
               <property name="pady">5</property>
               <property name="propagate">False</property>
               <property name="row">6</property>
               <property name="rowspan">1</property>
+              <property name="sticky">w</property>
               <property type="col" id="0" name="minsize">0</property>
               <property type="col" id="0" name="pad">0</property>
               <property type="col" id="0" name="uniform" />
@@ -252,11 +253,12 @@
             <layout manager="grid">
               <property name="column">0</property>
               <property name="columnspan">1</property>
-              <property name="padx">5</property>
+              <property name="padx">0</property>
               <property name="pady">0</property>
               <property name="propagate">False</property>
-              <property name="row">7</property>
+              <property name="row">6</property>
               <property name="rowspan">1</property>
+              <property name="sticky">e</property>
               <property type="col" id="0" name="minsize">0</property>
               <property type="col" id="0" name="pad">0</property>
               <property type="col" id="0" name="uniform" />
@@ -291,10 +293,11 @@
     <child>
       <object class="ttk.Frame" id="frame1">
         <property name="height">0</property>
+        <property name="width">200</property>
         <layout manager="grid">
           <property name="column">0</property>
           <property name="columnspan">10</property>
-          <property name="ipady">60</property>
+          <property name="ipady">70</property>
           <property name="padx">10</property>
           <property name="pady">10</property>
           <property name="propagate">False</property>
@@ -318,7 +321,7 @@
               <property name="column">0</property>
               <property name="propagate">False</property>
               <property name="row">4</property>
-              <property name="sticky">ew</property>
+              <property type="col" id="0" name="pad">0</property>
               <property type="row" id="0" name="minsize">0</property>
             </layout>
           </object>
@@ -332,13 +335,14 @@
             <layout manager="grid">
               <property name="column">1</property>
               <property name="columnspan">2</property>
-              <property name="ipadx">150</property>
+              <property name="ipadx">200</property>
+              <property name="ipady">12</property>
               <property name="padx">5</property>
-              <property name="propagate">True</property>
+              <property name="propagate">False</property>
               <property name="row">4</property>
-              <property name="sticky">ew</property>
-              <property type="col" id="0" name="minsize">0</property>
-              <property type="col" id="0" name="pad">0</property>
+              <property name="rowspan">1</property>
+              <property name="sticky">nsew</property>
+              <property type="col" id="1" name="pad">0</property>
               <property type="row" id="0" name="minsize">0</property>
             </layout>
           </object>
@@ -349,10 +353,9 @@
             <property name="text" translatable="yes">Output directory</property>
             <layout manager="grid">
               <property name="column">0</property>
-              <property name="padx">5</property>
               <property name="propagate">False</property>
               <property name="row">5</property>
-              <property name="sticky">ew</property>
+              <property type="col" id="0" name="pad">0</property>
               <property type="row" id="1" name="pad">0</property>
             </layout>
           </object>
@@ -366,28 +369,29 @@
             <layout manager="grid">
               <property name="column">1</property>
               <property name="columnspan">2</property>
-              <property name="ipadx">150</property>
+              <property name="ipadx">200</property>
+              <property name="ipady">12</property>
               <property name="padx">5</property>
-              <property name="propagate">True</property>
+              <property name="pady">0</property>
+              <property name="propagate">False</property>
               <property name="row">5</property>
-              <property name="sticky">ew</property>
-              <property type="col" id="0" name="minsize">0</property>
-              <property type="col" id="0" name="pad">0</property>
+              <property name="sticky">nsew</property>
+              <property type="col" id="1" name="pad">0</property>
               <property type="row" id="1" name="pad">0</property>
             </layout>
           </object>
         </child>
         <child>
           <object class="ttk.Button" id="Extract_Button">
+            <property name="takefocus">false</property>
             <property name="text" translatable="yes">Extract</property>
-            <bind sequence="&lt;Button-1&gt;" handler="ButtonOnClick" add="" />
             <layout manager="grid">
               <property name="column">7</property>
               <property name="columnspan">2</property>
               <property name="padx">10</property>
               <property name="propagate">False</property>
-              <property name="row">5</property>
-              <property name="rowspan">1</property>
+              <property name="row">4</property>
+              <property name="rowspan">2</property>
               <property name="sticky">nsew</property>
               <property type="row" id="0" name="minsize">0</property>
             </layout>
@@ -397,10 +401,10 @@
           <object class="ttk.Label" id="label4">
             <property name="text" translatable="yes">Save full protein</property>
             <layout manager="grid">
-              <property name="column">0</property>
+              <property name="column">2</property>
               <property name="columnspan">1</property>
               <property name="ipadx">0</property>
-              <property name="padx">0</property>
+              <property name="padx">5</property>
               <property name="propagate">False</property>
               <property name="row">2</property>
               <property name="rowspan">1</property>
@@ -419,10 +423,10 @@
           <object class="ttk.Label" id="label5">
             <property name="text" translatable="yes">Save 2D depiction</property>
             <layout manager="grid">
-              <property name="column">0</property>
+              <property name="column">2</property>
               <property name="columnspan">1</property>
               <property name="ipadx">0</property>
-              <property name="padx">0</property>
+              <property name="padx">5</property>
               <property name="propagate">False</property>
               <property name="row">1</property>
               <property name="rowspan">1</property>
@@ -431,9 +435,6 @@
               <property type="col" id="0" name="pad">0</property>
               <property type="col" id="0" name="uniform" />
               <property type="col" id="0" name="weight">0</property>
-              <property type="row" id="10" name="minsize">0</property>
-              <property type="row" id="10" name="pad">0</property>
-              <property type="row" id="11" name="minsize">0</property>
             </layout>
           </object>
         </child>
@@ -442,16 +443,12 @@
             <property name="takefocus">false</property>
             <property name="variable">boolean:SaveDepiction</property>
             <layout manager="grid">
-              <property name="column">1</property>
-              <property name="columnspan">1</property>
+              <property name="column">2</property>
+              <property name="columnspan">6</property>
               <property name="ipadx">0</property>
               <property name="propagate">False</property>
               <property name="row">1</property>
               <property name="rowspan">1</property>
-              <property name="sticky">w</property>
-              <property type="row" id="10" name="minsize">0</property>
-              <property type="row" id="10" name="pad">0</property>
-              <property type="row" id="11" name="minsize">0</property>
             </layout>
           </object>
         </child>
@@ -460,13 +457,12 @@
             <property name="takefocus">false</property>
             <property name="variable">boolean:ExtractFullProtein</property>
             <layout manager="grid">
-              <property name="column">1</property>
-              <property name="columnspan">1</property>
+              <property name="column">2</property>
+              <property name="columnspan">6</property>
               <property name="ipadx">0</property>
               <property name="propagate">False</property>
               <property name="row">2</property>
               <property name="rowspan">1</property>
-              <property name="sticky">w</property>
               <property type="row" id="10" name="minsize">0</property>
               <property type="row" id="10" name="pad">0</property>
             </layout>
@@ -476,18 +472,19 @@
           <object class="ttk.Combobox" id="formatComboBox">
             <property name="exportselection">false</property>
             <property name="state">readonly</property>
-            <property name="values">pdb mol2 sdf smiles</property>
+            <property name="values">pdb mol2 sdf smi</property>
             <bind sequence="&lt;&lt;ComboboxSelected&gt;&gt;" handler="ComboxSelected" add="" />
             <layout manager="grid">
-              <property name="column">1</property>
-              <property name="columnspan">2</property>
+              <property name="column">2</property>
+              <property name="columnspan">6</property>
               <property name="ipadx">0</property>
-              <property name="padx">2</property>
-              <property name="pady">2</property>
-              <property name="propagate">True</property>
+              <property name="ipady">0</property>
+              <property name="padx">0</property>
+              <property name="pady">0</property>
+              <property name="propagate">False</property>
               <property name="row">0</property>
               <property name="rowspan">1</property>
-              <property name="sticky">w</property>
+              <property name="sticky">e</property>
               <property type="col" id="1" name="weight">0</property>
             </layout>
           </object>
@@ -496,10 +493,11 @@
           <object class="ttk.Label" id="label6">
             <property name="text" translatable="yes">Output format</property>
             <layout manager="grid">
-              <property name="column">0</property>
+              <property name="column">2</property>
+              <property name="padx">5</property>
               <property name="propagate">True</property>
               <property name="row">0</property>
-              <property name="sticky">ew</property>
+              <property name="sticky">w</property>
             </layout>
           </object>
         </child>
@@ -512,11 +510,138 @@
             <property name="variable">string:barVar</property>
             <layout manager="grid">
               <property name="column">9</property>
-              <property name="columnspan">1</property>
+              <property name="columnspan">2</property>
               <property name="propagate">False</property>
-              <property name="row">5</property>
+              <property name="row">4</property>
               <property name="rowspan">1</property>
               <property name="sticky">nsew</property>
+            </layout>
+          </object>
+        </child>
+        <child>
+          <object class="ttk.Label" id="VersionLabel">
+            <property name="text" translatable="yes">VersionNUM</property>
+            <layout manager="grid">
+              <property name="column">10</property>
+              <property name="propagate">True</property>
+              <property name="row">5</property>
+              <property name="sticky">e</property>
+            </layout>
+          </object>
+        </child>
+        <child>
+          <object class="ttk.Label" id="label7">
+            <property name="text" translatable="yes">Add hydrogens</property>
+            <layout manager="grid">
+              <property name="column">2</property>
+              <property name="padx">5</property>
+              <property name="propagate">False</property>
+              <property name="row">3</property>
+              <property name="sticky">w</property>
+            </layout>
+          </object>
+        </child>
+        <child>
+          <object class="ttk.Checkbutton" id="checkbutton3">
+            <property name="takefocus">false</property>
+            <property name="variable">boolean:addHydrogens</property>
+            <layout manager="grid">
+              <property name="column">2</property>
+              <property name="columnspan">6</property>
+              <property name="ipadx">0</property>
+              <property name="propagate">False</property>
+              <property name="row">3</property>
+              <property name="rowspan">1</property>
+            </layout>
+          </object>
+        </child>
+        <child>
+          <object class="ttk.Label" id="label9">
+            <property name="text" translatable="yes">Get from PDB</property>
+            <layout manager="grid">
+              <property name="column">0</property>
+              <property name="propagate">False</property>
+              <property name="row">0</property>
+              <property name="sticky">ew</property>
+              <property type="col" id="0" name="pad">0</property>
+            </layout>
+          </object>
+        </child>
+        <child>
+          <object class="ttk.Entry" id="getFromFTP">
+            <property name="exportselection">false</property>
+            <property name="state">normal</property>
+            <property name="textvariable">string:getFromPDBList</property>
+            <property name="validate">none</property>
+            <layout manager="grid">
+              <property name="column">0</property>
+              <property name="columnspan">2</property>
+              <property name="ipadx">60</property>
+              <property name="padx">5</property>
+              <property name="propagate">False</property>
+              <property name="row">1</property>
+              <property name="rowspan">3</property>
+              <property name="sticky">nw</property>
+              <property type="col" id="0" name="pad">0</property>
+            </layout>
+          </object>
+        </child>
+        <child>
+          <object class="ttk.Separator" id="separator1">
+            <property name="orient">vertical</property>
+            <layout manager="grid">
+              <property name="column">2</property>
+              <property name="columnspan">1</property>
+              <property name="ipadx">0</property>
+              <property name="padx">0</property>
+              <property name="propagate">False</property>
+              <property name="row">0</property>
+              <property name="rowspan">4</property>
+              <property name="sticky">nsw</property>
+            </layout>
+          </object>
+        </child>
+        <child>
+          <object class="ttk.Button" id="DownloadButton">
+            <property name="takefocus">false</property>
+            <property name="text" translatable="yes">Download</property>
+            <layout manager="grid">
+              <property name="column">1</property>
+              <property name="columnspan">1</property>
+              <property name="propagate">False</property>
+              <property name="row">1</property>
+              <property name="rowspan">3</property>
+              <property name="sticky">nse</property>
+              <property type="col" id="1" name="pad">0</property>
+            </layout>
+          </object>
+        </child>
+        <child>
+          <object class="ttk.Label" id="label8">
+            <property name="justify">left</property>
+            <property name="text" translatable="yes">Separate PDB codes by a space </property>
+            <property name="wraplength">0</property>
+            <layout manager="grid">
+              <property name="column">0</property>
+              <property name="columnspan">1</property>
+              <property name="propagate">False</property>
+              <property name="row">2</property>
+              <property name="rowspan">1</property>
+              <property name="sticky">w</property>
+              <property type="col" id="0" name="pad">0</property>
+            </layout>
+          </object>
+        </child>
+        <child>
+          <object class="ttk.Label" id="label10">
+            <property name="text" translatable="yes">Downloaded files will be saved in output directory</property>
+            <layout manager="grid">
+              <property name="column">0</property>
+              <property name="columnspan">2</property>
+              <property name="propagate">False</property>
+              <property name="row">3</property>
+              <property name="sticky">w</property>
+              <property type="col" id="0" name="pad">0</property>
             </layout>
           </object>
         </child>
